fixed extra spaces
fixed responsive ness of the header

--- a/V2 site/style.css
+++ b/V2 site/style.css
@@ -227,7 +227,7 @@ form
 .banner-2
 {
   /*background: url(images/picjumbo-bg5.png) no-repeat fixed 30% 0%/cover;*/
-  background: url(images/happyman-2.jpg) no-repeat fixed 30% 0%/cover;
+  /*background: url(images/happyman-2.jpg) no-repeat fixed 30% 0%/cover;*/
   padding: 90px 0px;
   cursor: default;
 
@@ -311,7 +311,7 @@ form
 .banner-3
 {
   /*background: url(images/picjumbo-bg5.png) no-repeat fixed 30% 0%/cover;*/
-  background: url(images/happyman-3.jpg) no-repeat fixed 30% 0%/cover;
+  /*background: url(images/happyman-3.jpg) no-repeat fixed 30% 0%/cover;*/
   padding: 90px 0px;
   cursor: default;
 
