--- a/caroselTest/css/main.css
+++ b/caroselTest/css/main.css
@@ -397,6 +397,19 @@ form textarea:focus
   background-color: #fff;
 }
 
+/*Is Visible*/
+.is-visible { display: block !important; 
+    transition: all 0.5s ease-in !important;
+    -moz-transition: all 0.5s ease-in !important;
+    -o-transition: all 0.5s ease-in !important;
+    -ms-transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s ease-in !important;
+}
+
+#mobile-header {
+display: none;
+}
+
 /*------------------------------------------------------------------------------------------------------------------Wrapper and Carosel*/
 .wrapper{
 	width: 100%;
